@@ -76,6 +76,7 @@ Result = namedtuple('Result', ['cols',
                                'output_width'])
 
 TABLE_SCHEMA_MIN_VERSION = StrictVersion("0.57.0")
+TABLE_TYPE_MIN_VERSION = StrictVersion("2.0.0")
 
 
 def parse_config_path(args=sys.argv):
@@ -288,14 +289,17 @@ class CrateCmd(object):
     @noargs_command
     def _show_tables(self, *args):
         """ print the existing tables within the 'doc' schema """
+        v = self.connection.lowest_server_version
         schema_name = \
-            "table_schema" if self.connection.lowest_server_version \
-            >= TABLE_SCHEMA_MIN_VERSION else "schema_name"
+            "table_schema" if v >= TABLE_SCHEMA_MIN_VERSION else "schema_name"
+        table_filter = \
+            " AND table_type = 'BASE TABLE'" if v >= TABLE_TYPE_MIN_VERSION else ""
 
-        self._exec("select format('%s.%s', {schema}, table_name) as name "
-                   "from information_schema.tables "
-                   "where {schema} not in ('sys','information_schema', 'pg_catalog')"
-                   .format(schema=schema_name))
+        self._exec("SELECT format('%s.%s', {schema}, table_name) AS name "
+                   "FROM information_schema.tables "
+                   "WHERE {schema} NOT IN ('sys','information_schema', 'pg_catalog')"
+                   "{table_filter}"
+                   .format(schema=schema_name, table_filter=table_filter))
 
     @noargs_command
     def _quit(self, *args):
